src/shared/styles/_variables.scss
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;500&display=swap");
// colors

$white: #fff;
$black: #000002;
$lightBlack: #363636;
$red: #ff2c2c;
$disabledRed: #ff5151;

$gradientColor1: #0a1b66;
$gradientColor2: #000002;
$gradientColor3: #ac1818;

$bgGradient: linear-gradient(
  180deg,
  $gradientColor2,
  $gradientColor1,
  $gradientColor2,
  $gradientColor1
);

// fonts
$regular: 300;
$semibold: 400;
// borders
$bsm: 7px;

// shadows
$sprimary: rgba(149, 157, 165, 0.2) 0px 8px 24px;

$animation: slidein;

body {
  background: $bgGradient;
}

.p-dialog-content {
  padding: none;
}

